fix mobile image overflow scroll

--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -272,7 +272,7 @@ iframe
     .content--top
       float: left;
       height: 105px;
-      overflow: auto;
+      overflow: hidden;
       width: 25%;
 
     .content--main
